Fix nav collapse button for BS3

--- a/_vpr/static/sass/_vpr.scss
+++ b/_vpr/static/sass/_vpr.scss
@@ -5,8 +5,8 @@ $orange: #ed8b00;
 $red: #e04e39;
 $gray: #75787b;
 $blue: #307fe2;
-$percent: 6%;
-$btn-percent: 4%;
+$percent: 3%;
+$btn-percent: 1%;
 $tablet: 768px;
 
 @media (max-width: $tablet) {
@@ -45,6 +45,7 @@ ul.nav li a {
 }
 
 button.navbar-toggle {
+    border-radius: 0;
     margin-top: 15px;
     background-color: darken($green, $btn-percent * 2);
     *background-color: darken($green, $btn-percent * 2);
@@ -71,6 +72,9 @@ button.navbar-toggle {
         border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1515', endColorstr='#ff0404', GradientType=0);
         filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    }
+    span.icon-bar {
+        background: white;
     }
 }
 
